# gazelle_nixos_repro

./: BUILD  MODULE.bazel  README.md  WORKSPACE  custom_go_toolchains.bzl  default.nix  non_module_deps.bzl
